# SGEMM_CUDA

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cuBLAS_sgemm.cu  environment.yml  gen_benchmark_results.sh  plot_benchmark_results.py  sgemm.cu  simplest_kernel.cu  tensor_cores.cu
scripts/: bank_calc.py  kernel_10_autotuner.sh  kernel_11_autotuner.sh  kernel_9_autotuner.sh
src/: kernels.cuh  runner.cu  runner.cuh
src/kernels/: 10_kernel_warptiling.cuh  11_kernel_double_buffering.cuh  12_kernel_double_buffering.cuh  1_naive.cuh  2_kernel_global_mem_coalesce.cuh  3_kernel_shared_mem_blocking.cuh  4_kernel_1D_blocktiling.cuh  4_kernel_1D_warptiling.cuh  5_kernel_2D_blocktiling.cuh  5_kernel_2D_warptiling.cuh  6_kernel_vectorize.cuh  7_kernel_resolve_bank_conflicts.cuh  7_kernel_tensorcores.cuh  8_kernel_bank_extra_col.cuh  9_kernel_autotuned.cuh  9_kernel_generalizing.cuh  registers_info.txt
